--- a/src/components/main-page/MainImage.module.css
+++ b/src/components/main-page/MainImage.module.css
@@ -3,13 +3,13 @@
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  border-radius: 16px;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
 }
 
 .mainImage {
   position: relative;
   width: 100%;
+  max-height: 100vh;
   aspect-ratio: 16 / 9;
   overflow: hidden;
 }
